--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-sdk android:minSdkVersion="16"/>
 
     <application
+        android:configChanges="keyboardHidden|orientation"
         android:allowBackup="true"
         android:icon="@drawable/firelogo"
         android:label="@string/app_name"
@@ -25,5 +26,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-feature android:name="android.hardware.camera"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
 </manifest>
